--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
-    <noscript>Kamu butuh mengaktifkan JavaScript untuk menjalankan aplikasi ini.</noscript>
+    <noscript>Aktifkan JavaScript untuk menjalankan aplikasi ini.</noscript>
     <div id="root"></div>
   </body>
 </html>
